WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
312866
[:has() perf] Limit invalidation traversal with scope selector
https://bugs.webkit.org/show_bug.cgi?id=312866
Summary
[:has() perf] Limit invalidation traversal with scope selector
Antti Koivisto
Reported
2026-04-21 01:56:34 PDT
We can find the minimal traversal scope.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2026-04-21 01:57:23 PDT
<
rdar://problem/175233639
>
Antti Koivisto
Comment 2
2026-04-21 02:12:55 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/63212
EWS
Comment 3
2026-04-21 10:29:20 PDT
Committed
311702@main
(245943e53c92): <
https://commits.webkit.org/311702@main
> Reviewed commits have been landed. Closing PR #63212 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug